# beethoven-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sbt  isca.sh  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/aws/: id_ed25519  id_ed25519.pub
src/main/c/: CMakeLists.txt  cache_utils.h  fir_tb_SCAFFOLD.cc  fir_tb_SOLUTION.cc  main-solution.cc  main.cc  main.cc.bak  python_bindings.cpp  test_vector_add.py  transfer_tb  vector_tb.cc
src/main/scala/: MyAccelerator.scala  MyAcceleratorConfig.scala  VectorAdd.scala  VectorAddConfig.scala  VectorAddCore.scala  VectorDot.scala  VectorMatMulConfig.scala  VectorMatMulCore.scala
src/main/scala/FIR/: FIRScaffold.scala  FIRSolution.scala
src/main/scala/VectorAdd/: VectorAdd.scala  VectorAddConfig.scala  VectorAddCore.scala
src/main/scala/systolic/: Constants.scala
src/main/scala/systolic/chisel/: ProcessingElement.scala  SystolicArray.scala  SystolicArrayChiselConfig.scala  SystolicArrayChiselConfig_SOLUTION.scala  SystolicArrayCore.scala  SystolicArrayCore_SOLUTION.scala
src/main/scala/vector_add/: VectorAdd.scala  VectorAddConfig.scala  VectorAddCore.scala
src/main/verilog/systolic/: ProcessingElement.v  ShiftReg.v  SystolicArray.v  SystolicArrayCore.v  SystolicArrayCore_EMPTY.v  SystolicArrayCore_SOLUTION.v
src/test/c/fir/: CMakeLists.txt  fir_tb_SCAFFOLD.cc
src/test/c/systolic/: CMakeLists.txt  systolic_array_test.cc  systolic_array_test_EMPTY.cc  systolic_array_test_SOLUTION.cc
src/test/c/vector_add/: CMakeLists.txt  test_vector_add.py
(+2 files in other folders)
